# ignis

./: .gitignore  Cargo.toml  README.md  ignis-fe14.yml  package.bat  requirements.txt
.github/workflows/: build.yml
Data/FE14/: Text.yml
Data/FE14/Stores/: Asset.yml  Multis.yml  Singles.yml
Data/FE14/Types/: CastleJoin.yml  Dispo.yml  GameData.yml
Data/Misc/: gen1data.csv
Data/Misc/GenericSongstress/: 赤0.bch.lz  赤1.bch.lz  青1.bch.lz
ignis/controllers/: directory_input.py  enum_combo_box.py  error_dialog.py  fe14_user_config_form.py  inputs_form.py  main.py  main_window.py
ignis/core/: character_shuffler.py  randomization_process.py  randomization_step.py  randomize_worker.py  stat_randomization_strategy.py
ignis/core/fe14/: fe14_chapter_vendor.py  fe14_character_shuffler.py  fe14_character_vendor.py  fe14_classes_vendor.py  fe14_item_vendor.py  fe14_randomization_process.py  fe14_skills_vendor.py  (+1 more)
ignis/model/: configs.py  fe14_character_info.py  fe14_character_report.py  fe14_class_info.py  fe14_dependencies.py  fe14_game_config.py  fe14_route.py  fe14_route_exception.py  fe14_user_config.py  game.py  game_load_inputs.py  item_category.py  language.py  stat_randomization_algorithm.py  weapon_exp.py  weapon_rank.py
ignis/utils/: dialog_utils.py  theme_utils.py
ignis/views/: ui_directory_input.py  ui_fe14_user_config_form.py  ui_inputs_form.py  ui_main_window.py
src/: 006Snippet.yml  A000Snippet.yml  A000Snippet2.yml  A002Snippet.yml  A005Snippet1.yml  A005Snippet2.yml  AnimFixSnippet.txt  EliseAnimFixSnippet.txt  lib.rs  player_randomization_info.rs
(+107 files in other folders)
